--- a/site.yaml
+++ b/site.yaml
@@ -167,7 +167,11 @@ class5:
       link: https://homenew.console.aliyun.com/home/scene/Operation
       img: assets/site/技术相关/开源/阿里云.png
       descr: 阿里巴巴旗下的云计算服务平台
-
+    6:
+      name: Vercel
+      link: https://vercel.com/
+      img: assets/site/技术相关/开源/Vercel.png
+      descr: 最好用的网站托管服务平台
 class6:
   class_name: 技术相关 · 论坛
   link_list:
